--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ AIRFLOW__CORE__LOAD_EXAMPLES=False
 AIRFLOW_UID=0
 
 # Backend DB
-AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postg$
+AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
 AIRFLOW__DATABASE__LOAD_DEFAULT_CONNECTIONS=False
 
 # Airflow Init
